fix: 按 TV 父优先模型对齐 catvod 宿主 API（Util/Json/Path 等）
Co-authored-by: Cursor <cursoragent@cursor.com>